--- a/app/Resources/views/blog/article.html.twig
+++ b/app/Resources/views/blog/article.html.twig
@@ -3,12 +3,12 @@
 {% block body %}
 <div class="container">
   <!-- Page Heading -->
-  <h1 class="my-4">Produit : {{ product.productName }} #{{ product.id }} </h1>
+  <h1 class="my-4">{{ post.title }}</h1>
   <hr>
   <div class="col-md-12">
-    <p>{{ product.description }}</p>
+    <p>{{ post.body }}</p>
     <div>
-      <span class="badge">Ajouté le {{ product.dateAdd|date('d/m/Y H:i:s')  }}</span>
+      <span class="badge">Publié le {{ post.dateAdd|date('d/m/Y H:i:s')  }}</span>
     </div>
 
     <hr>
