--- a/app/Resources/views/blog/products.html.twig
+++ b/app/Resources/views/blog/products.html.twig
@@ -5,7 +5,7 @@
 
   <!-- Page Heading -->
   <h1 class="my-4">
-    Liste d'articles
+    Liste de produits
     <!-- <small>Secondary Text</small> -->
   </h1>
   {% for product in products %}
@@ -18,8 +18,8 @@
             </div>
             <div class="col-md-5">
               <h3>{{ product.productName }}</h3>
-              <p>{{ product.description }}</p>
-              <a class="btn btn-primary" href="{{ path('Article',{ 'id': product.id }) }}">View Project</a>
+              <p>{{ product.description|length > 200 ? product.description|slice(0, 200) ~ '...' : product.description }}</p>
+              <a class="btn btn-primary" href="{{ path('Product',{ 'id': product.id }) }}">Détails produit</a>
             </div>
           </div>
           <!-- /.row -->
@@ -30,18 +30,18 @@
 
   <ul class="pagination justify-content-center">
     <li class="page-item">
-      <a class="page-link" {% if page == 1 %} class="disabled" {% else %} href="{{ path('Articles',{ 'page': page - 1 }) }}" {% endif %} aria-label="Previous">
+      <a class="page-link" {% if page == 1 %} class="disabled" {% else %} href="{{ path('Products',{ 'page': page - 1 }) }}" {% endif %} aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
         <span class="sr-only">Previous</span>
       </a>
     </li>
     {% for p in range(1, nbPages) %}
       <li {% if p == page %} class="active page-item"{% else %} class="page-item"  {% endif %} >
-        <a class="page-link" href="{{ path('Articles',{ 'page': p }) }}">{{ p }}</a>
+        <a class="page-link" href="{{ path('Products',{ 'page': p }) }}">{{ p }}</a>
       </li>
     {% endfor %}
     <li class="page-item">
-      <a class="page-link" {% if page == nbPages %} class="disabled" {% else %} href="{{ path('Articles',{ 'page': page + 1 }) }}" {% endif %} aria-label="Next">
+      <a class="page-link" {% if page == nbPages %} class="disabled" {% else %} href="{{ path('Products',{ 'page': page + 1 }) }}" {% endif %} aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
         <span class="sr-only">Next</span>
       </a>
