--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,9 @@
 
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
+        <link href="{{ asset('css/bootstrap-reboot.min.css') }}" type="text/css" rel="stylesheet" />
+        <link href="{{ asset('css/bootstrap-reboot.min.css') }}" type="text/css" rel="stylesheet" />
+        <link href="{{ asset('css/bootstrap-grid.min.css') }}" type="text/css" rel="stylesheet" />
         <link href="{{ asset('css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
         <link href="{{ asset('css/simple-line-icons.css') }}" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
@@ -18,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
           <div class="container">
             {% if page_name is not defined %}
-              {% set page_name = 'home' %}
+              {% set page_name = '' %}
             {% endif %}
             <a class="navbar-brand" href="{{path('homepage')}}">Mon Blog</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,6 +50,7 @@
                     <a class="btn btn-default" href="{{path('fos_user_security_logout')}}">Déconnexion</a>
                   {% else %}
                     <a class="btn btn-default" href="{{path('fos_user_security_login')}}">Connexion</a>
+                    <a class="btn btn-primary" href="{{path('fos_user_registration_register')}}">Nouveau Compte</a>
                   {% endif %}
 
                 </li>
@@ -60,6 +64,7 @@
         <script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>
         <script src="{{ asset('js/jquery.min.js') }}"></script>
         <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
+        <script src="{{ asset('js/bootstrap.min.js') }}"></script>
         {% endblock %}
     </body>
 </html>
