--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -67,4 +67,11 @@
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
         {% endblock %}
     </body>
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Mon Blog 2017</p>
+      </div>
+      <!-- /.container -->
+    </footer>
 </html>
