--- a/app/Resources/views/blog/article.html.twig
+++ b/app/Resources/views/blog/article.html.twig
@@ -6,7 +6,7 @@
   <h1 class="my-4">{{ post.title }}</h1>
   <hr>
   <div class="col-md-12">
-    <p>{{ post.body }}</p>
+    <p>{{ post.body|raw }}</p>
     <div>
       <span class="badge">Publié le {{ post.dateAdd|date('d/m/Y H:i:s')  }}</span>
     </div>
@@ -15,12 +15,4 @@
   </div>
 </div>
 <!-- /.container -->
-
-<!-- Footer -->
-<footer class="py-5 bg-dark">
-  <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
-  </div>
-  <!-- /.container -->
-</footer>
 {% endblock %}
