--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -60,7 +60,7 @@
 </section>
 
 <!-- Image Showcases -->
-<section class="showcase">
+<!-- <section class="showcase">
   <div class="container-fluid p-0">
     <div class="row no-gutters">
 
@@ -85,10 +85,10 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- Testimonials -->
-<section class="testimonials text-center bg-light">
+<!-- <section class="testimonials text-center bg-light">
   <div class="container">
     <h2 class="mb-5">What people are saying...</h2>
     <div class="row">
@@ -115,10 +115,10 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- Call to Action -->
-<section class="call-to-action text-white text-center">
+<!-- <section class="call-to-action text-white text-center">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
@@ -139,10 +139,10 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- Footer -->
-<footer class="footer bg-light">
+<!-- <footer class="footer bg-light">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
@@ -186,5 +186,5 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> -->
 {% endblock %}
