--- a/app/Resources/TwigBundle/views/Exception/error403.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error403.html.twig
@@ -6,8 +6,9 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-9 mx-auto">
-        <h1 class="mb-5">Erreur 404</h1>
-        <h1 class="mb-5">La page que vous cherchez n'éxiste pas.</h1>
+        <h1 class="mb-5">Erreur 401 - Accés refusé</h1>
+        <h2 class="mb-5">Vous n'avez pas le droit d'accéder à cette page.</h2>
+        <h2 class="mb-5">Veuillez contacter l'adminitrateur du site.</h2>
         <a class="btn btn-warning" href="{{path('homepage')}}">Retour à la page d'acceuil</a>
       </div>
     </div>
