--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -6,19 +6,8 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-9 mx-auto">
-        <h1 class="mb-5">Build a landing page for your business or project and generate more leads!</h1>
-      </div>
-      <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-        <form>
-          <div class="form-row">
-            <div class="col-12 col-md-9 mb-2 mb-md-0">
-              <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-            </div>
-            <div class="col-12 col-md-3">
-              <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-            </div>
-          </div>
-        </form>
+        <h1 class="mb-5">Bienvenue sur notre blog Symfony 3</h1>
+        <h1 class="mb-5">Découvrez notre sélection d'articles et de produits dans le menu!</h1>
       </div>
     </div>
   </div>
@@ -33,8 +22,8 @@
           <div class="features-icons-icon d-flex">
             <i class="icon-screen-desktop m-auto text-primary"></i>
           </div>
-          <h3>Fully Responsive</h3>
-          <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+          <h3>Site web adaptatif</h3>
+          <p class="lead mb-0">Ce théme s'adapte à tout les appareils de  toutes dimensions!</p>
         </div>
       </div>
       <div class="col-lg-4">
@@ -42,8 +31,8 @@
           <div class="features-icons-icon d-flex">
             <i class="icon-layers m-auto text-primary"></i>
           </div>
-          <h3>Bootstrap 4 Ready</h3>
-          <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+          <h3>Réalisé avec Bootstrap 4</h3>
+          <p class="lead mb-0">Utilisant la dérnière version du framework Bootstrap!</p>
         </div>
       </div>
       <div class="col-lg-4">
@@ -51,8 +40,8 @@
           <div class="features-icons-icon d-flex">
             <i class="icon-check m-auto text-primary"></i>
           </div>
-          <h3>Easy to Use</h3>
-          <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+          <h3>Facile à Utiliser</h3>
+          <p class="lead mb-0">Naviguer dans le menu pour accèder aux rubriques du blog!</p>
         </div>
       </div>
     </div>
