--- a/app/Resources/views/default/about.html.twig
+++ b/app/Resources/views/default/about.html.twig
@@ -4,8 +4,8 @@
 
   <!-- Introduction Row -->
   <h1 class="my-4">A propos du blog</h1>
-  <p>Ce blog est réalisé dans le cadre du projet e-application. </p>
-  <p>Repository git du blog sur: <a href="https://gitlab.com/AdlaniMouataz/projet-symfony">https://gitlab.com/AdlaniMouataz/projet-symfony</a> </br>
+  <p>Ce blog est réalisé dans le cadre du projet symfony. </p>
+  <p>Repository git du blog sur:
     Pour plus de détails voir le fichier <b>README.md</b> dans la racine du projet
   </p>
 
@@ -15,14 +15,19 @@
       <h2 class="my-4">Réalisé par:</h2>
     </div>
     <div class="col-lg-4 col-sm-6 text-center mb-4">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-      <h3>Eladlani Almouataz</h3>
-      <small>Master 2 - parcours DECOL</small>
+      <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/150x150" alt="">
+      <h4>EL OUAHABI Kaoutar</h4>
+      <small>Master 2 - parcours IPS</small>
     </div>
     <div class="col-lg-4 col-sm-6 text-center mb-4">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-      <h3>Elgabsi Moez</h3>
-      <small>Master 2 - parcours DECOL</small>
+      <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/150x150" alt="">
+      <h4>SOUHEILLI MAJD Mariam</h4>
+      <small>Master 2 - parcours IPS</small>
+    </div>
+    <div class="col-lg-4 col-sm-6 text-center mb-4">
+      <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/150x150" alt="">
+      <h4>BA Khaled</h4>
+      <small>Master 2 - parcours IPS</small>
     </div>
   </div>
 
